--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,9 @@ ENV/
 .spyderproject
 .spyproject
 
+# pycharm projecct settings
+.idea
+
 # Rope project settings
 .ropeproject
 
@@ -97,3 +100,7 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# ignore data folders
+/Result
+/Video
